# amtrack_rs

./: Cargo.toml  Dockerfile  README.md  new.json  old.json  rocket.toml  t1.json
src/: main.rs
src/structs/: GetStationsResponse.rs  GetTrainsResponse.rs  TrainItem.rs  TrainStation.rs  mod.rs
src/structs/final/: GetTrainsResponse.rs  TrainItem.rs  TrainStation.rs  mod.rs
src/structs/raw/: RawResponse.rs  RawStation.rs  mod.rs
src/utils/: ConvertRawTrains.rs  mod.rs
static/: get-stations.json
