[package]
name = "amtrack_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
amtk = "=0.1.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
rocket = "0.5.1"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.5.0"
redis = "0.27.3"
